# agents

./: pyproject.toml
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3_azure_openai.ipynb
3_crew/test_proj/: README.md  pyproject.toml  report.md
3_crew/test_proj/src/test_proj/: crew.py  main.py
3_crew/test_proj/src/test_proj/config/: agents.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
5_autogen/sandbox/: flights.md
guides/: 10_intermediate_python.ipynb
