[project]
name = "test_proj"
version = "0.1.0"
description = "test_proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.13.0",
]

[project.scripts]
test_proj = "test_proj.main:run"
run_crew = "test_proj.main:run"
train = "test_proj.main:train"
replay = "test_proj.main:replay"
test = "test_proj.main:test"
run_with_trigger = "test_proj.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
